# MemberTaskC

./: Board.cpp  Board.h  CMakeLists.txt  CircularInt.cpp  CircularInt.hpp  Element.cpp  Element.h  IllegalCharException.cpp  IllegalCharException.h  IllegalCoordinateException.cpp  IllegalCoordinateException.h  Index.cpp  Index.h  Makefile  Member.h  README.md  ids.txt  main.cpp
Task3/: Member.h
Task5/: CircularInt.hpp
Task7/: CMakeLists.txt  DummyPlayers.h  Player.cpp  Player.h  TicTacToe.cpp  TicTacToe.h  main.cpp
