cmake_minimum_required(VERSION 3.9)
project(task5)

set(CMAKE_CXX_STANDARD 11)

add_executable(task5 main.cpp Board.h Board.cpp Element.cpp Element.h Index.cpp Index.h indexExecption.cpp indexExecption.h inputExecption.cpp inputExecption.h IllegalCoordinateException.cpp IllegalCoordinateException.h IllegalCharException.cpp IllegalCharException.h IllegalCoordinateException.cpp IllegalCoordinateException.h IllegalCharException.cpp IllegalCharException.h)